--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "http://yogesh7401.github.io/yogesh",
   "name": "yogesh",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npm run build",
+    "deploy": "gh-pages -d build",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -12,6 +15,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.0",
     "echarts-wordcloud": "^2.0.0",
+    "gh-pages": "^3.2.3",
     "less-loader": "^10.0.1",
     "moment": "^2.29.1",
     "sass-loader": "^12.1.0",
