--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gh-pages": "^3.2.3",
     "less-loader": "^10.0.1",
     "moment": "^2.29.1",
+    "pinkie-promise": "^2.0.1",
     "sass-loader": "^12.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.11",
